samples/_failures_safe/1761607613_9d6c5f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17b62a06.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_17b62a06.c:148:18: error: expected ‘;’ at end of input
  148 |             break
      |                  ^
      |                  ;
./samples/SAFE/__tmp_17b62a06.c:148:13: error: expected declaration or statement at end of input
  148 |             break
      |             ^~~~~
./samples/SAFE/__tmp_17b62a06.c:148:13: error: expected declaration or statement at end of input
